--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fileupload-sample",
+  "name": "multer-fileupload-sample",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
